# DiscordInQT

./: CMakeLists.txt  LICENSE
qml/: Main.qml
qt-chat-server/: package-lock.json  package.json  server.js
src/: main.cpp
src/chat/: ChatClient.cpp  ChatClient.h  ChatViewModel.h  Chatclient.cpp  Chatclient.h  Chatviewmodel.cpp  Chatviewmodel.h  chatclient.cpp  chatclient.h  chatviewmodel.cpp  chatviewmodel.h
src/utils/: Utils.h
